hifiberry-audiocontrol (0.4.4) stable; urgency=medium

  * Enhanced logging system with module-specific log level configuration

 -- HiFiBerry <info@hifiberry.com>  Sun, 07 Jul 2025 12:00:00 +0000

hifiberry-audiocontrol (0.4.3) stable; urgency=medium

  * Improved logging system with JSON-based configuration support
  * Added flexible logging configuration with subsystem-specific log levels
  * Added support for --log-config command line option in systemd service
  * Added environment variable overrides for logging configuration
  * Fixed logging initialization issues and improved error handling
  * Added comprehensive logging documentation and sample configurations
  * Enhanced logging subsystem mappings for better debugging
  * Added production-ready logging configuration for deployment

 -- HiFiBerry <info@hifiberry.com>  Fri, 04 Jul 2025 12:00:00 +0000

hifiberry-audiocontrol (0.4.2) stable; urgency=medium

  * Added systemd unit integration for librespot and RAAT backends
  * Librespot and RAAT controllers now check if systemd units are active
  * Added 'systemd_unit' configuration option (defaults: 'librespot', 'raat')
  * Improved error handling with non-blocking systemd checks
  * Enhanced player initialization with service status validation

 -- HiFiBerry <info@hifiberry.com>  Thu, 04 Jul 2025 10:00:00 +0000

hifiberry-audiocontrol (0.5.0) stable; urgency=medium

  * Renamed package from hifiberry-acr to hifiberry-audiocontrol
    to avoid conflicts
  * Renamed binary from acr to audiocontrol
  * Renamed service from acr to audiocontrol
  * Updated all references to use audiocontrol naming

 -- HiFiBerry <info@hifiberry.com>  Tue, 01 Jul 2025 10:00:00 +0000

hifiberry-acr (0.4.1) unstable; urgency=medium

  * Changed build system to sbuild

 -- HiFiBerry <info@hifiberry.com>  Tue, 24 Jun 2025 12:46:46 +0100

acr (0.4.0) unstable; urgency=medium
  * Streamlined config file syntax with unified services section